logs/sitehtml.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/SiteHTML'...
Compiling './lib/python3.5/site-packages/SiteHTML/__main__.py'...
***   File "./lib/python3.5/site-packages/SiteHTML/__main__.py", line 15
    print "Usage:  ", arg_list[0], "\"[SITE ROOT FOLDER]\"[options]\n"
                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/SiteHTML/images'...
Compiling './lib/python3.5/site-packages/SiteHTML/indexShare.py'...
***   File "./lib/python3.5/site-packages/SiteHTML/indexShare.py", line 77
    except KeyError, e:
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/SiteHTML/runners.py'...
***   File "./lib/python3.5/site-packages/SiteHTML/runners.py", line 79
    print "Updated", str(len(result)), "parts of", os.path.basename(f), ":"
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/SiteHTML-1.41.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
